<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Task Name Input -->
    <EditText
        android:id="@+id/taskNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_name_hint"
        android:inputType="text"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Task Description Input -->
    <EditText
        android:id="@+id/taskDescriptionInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_description_hint"
        android:inputType="text"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskNameInput"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Task End Date Input -->
    <EditText
        android:id="@+id/taskEndDateInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_end_date_hint"
        android:focusable="false"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDescriptionInput"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Task End Time Input -->
    <EditText
        android:id="@+id/taskEndTimeInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_end_time_hint"
        android:focusable="false"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskEndDateInput"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Color Tag Picker -->
    <Spinner
        android:id="@+id/colorTagInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskEndTimeInput"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Add Task Button -->
    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_task_button"
        android:backgroundTint="@color/button_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorTagInput"
        app:layout_constraintWidth_percent="0.9" />

    <!-- RecyclerView for Task List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/addTaskButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintHeight_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>
